agregando Scripst base de datos

--- a/ProyectoFinal/App.config
+++ b/ProyectoFinal/App.config
@@ -8,7 +8,7 @@
   <connectionStrings>
     <add name="Constr"
           connectionString = "Data Source = .\SqlExpress;
-           Initial Catalog = RegistroDb; Integrated Security=true"
+           Initial Catalog = ProyectoFinalDb; Integrated Security=true"
          providerName="system.Data.SqlClient" />
   </connectionStrings>
 
