--- a/ProyectoFinal/ProyectoFinal.csproj
+++ b/ProyectoFinal/ProyectoFinal.csproj
@@ -66,6 +66,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Consulta\ConsultaCargo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Consulta\ConsultaCargo.Designer.cs">
+      <DependentUpon>ConsultaCargo.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Consulta\ConsultaUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +103,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\Consulta\ConsultaCargo.resx">
+      <DependentUpon>ConsultaCargo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Consulta\ConsultaUsuario.resx">
       <DependentUpon>ConsultaUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,9 +129,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\Scripst\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\search_locate_find_icon-icons.com_67287 %281%29.png" />
   </ItemGroup>
@@ -134,6 +141,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\action_exit_close_remove_13915.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\preview_search_find_locate_1551.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\view_search_find_9565.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Search_find_3519.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\preview_search_find_locate_1551 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DAL\Scripst\ProyectoFinalDb.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
